Insert smileys at the cursor position

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=685899